5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1691_2167.log
== TEST (2019-04-24 20:12:57) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se é ida/ida-e-volta: ")
if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
NameError: name 'Borba' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:13:15) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se é ida/ida-e-volta: ")
if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
NameError: name 'Borba' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:13:33) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se e ida/ida-e-volta: ")
if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x!="Belem")and(x!=Borba)and(x!="Coari")and(x!=Humaita)and(x!=Manicore)and(x!=Maues):
NameError: name 'Borba' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:14:03) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se e ida/ida-e-volta: ")
if(x!="Belem")and(x!="Borba")and(x!="Coari")and(x!="Humaita")and(x!="Manicore")and(x!="Maues"):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:14:11) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se e ida/ida-e-volta: ")
if(x!="Belem")and(x!="Borba")and(x!="Coari")and(x!="Humaita")and(x!="Manicore")and(x!="Maues"):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 20:14:26) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se e ida/ida-e-volta: ")
if(x!="Belem")and(x!="Borba")and(x!="Coari")and(x!="Humaita")and(x!="Manicore")and(x!="Maues"):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- EXECUTION TIME:
0.1582
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.00
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.00
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:15:33) 
-- CODE:
x=input("Digite a cidade de destino : ")
y=input("Digite se e ida/ida-e-volta: ")
if(x!="Belem")and(x!="Borba")and(x!="Coari")and(x!="Humaita")and(x!="Manicore")and(x!="Maues"):
	print("Destino inexistente")
elif(x=="Belem"):
	if(y=="ida"):
		print("350.00")
	else:
		print("650.00")
elif(x=="Borba"):
	if(y=="ida"):
		print("80.00")
	else:
		print("152.00")
elif(x=="Coari"):
	if(y=="ida"):
		print("106.00")
	else:
		print("199.00")
elif(x=="Humaita"):
	if(y=="ida"):
		print("200.00")
	else:
		print("390.00")
elif(x=="Manicore"):
	if(y=="ida"):
		print("150.00")
	else:
		print("280.00")
elif(x=="Maues"):
	if(y=="ida"):
		print("100.00")
	else:
		print("190.00")
-- EXECUTION TIME:
0.112189
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.00
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.00
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
